# highs-api

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
example/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
example/vcpkg-clang/overlays/: x64-linux-clang-12.cmake
example/vcpkg-clang/toolchains/: clang-12-toolchain.cmake
src/: constraint.h  main.cpp  optimization_model.cpp  optimization_model.h
src/highs-wrapper/: linear_expression.cpp  linear_expression.h  var.h
